# MatrixKill

./: .gitignore  CMakeLists.txt  README.md  config.ini  generateMatrix.py
include/core/: config_reader.h  solver.h
include/solvers/: gauss_solver.h  jacobi_solver.h  sor_solver.h
include/utils/: timer.h
src/: main.cpp
src/core/: config_reader.cpp  solver.cpp
src/solvers/: gauss_solver.cpp  jacobi_solver.cpp  sor_solver.cpp
src/utils/: timer.cpp
